--- a/index.css
+++ b/index.css
@@ -380,11 +380,76 @@ nav>div>ul>li{
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
 }
 
+.txt-vaccination{
+   width: 150px;
+   height: 150px;
+}
+
+.txt-vaccination>h1{
+    font-size: large;
+    color: #2C4CCA;
+}
+
+.txt-vaccination>p{
+    font-size: small;
+}
+
+.footer-space{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.txt-info{
+    display: flex;
+    justify-content: flex-end;
+    width: 600px;
+}
+
+th{
+    padding-left: 40px;
+    color: #1f3e72;
+    text-align: left;
+}
+
+td{
+    padding-left: 40px;
+    font-size: x-small;
+    font-weight: 900;
+}
+
+.footer-botom{
+    width: 100%;
+}
+
+.footer-botom>ul{
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    font-size: x-small;
+    margin-top: 40px;
+}
+
+.terms{
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+}
+
+.terms>li{
+    margin-left: 10px;
+}
 
 footer{
     margin-top: 60px;
     height: 250px;
     background-color: #eef3ff;
+    padding: 0px 50px;
 }
 
 
